site.css
html {
    position: relative;
    height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
    height:100%;
    background-attachment:fixed;
    background-image:linear-gradient(transparent, rgb(58, 70, 77));
    /*background-color: rgb(60, 70, 77);*/
    background-color: rgb(87, 103, 114);
    font-family: monospace;
    min-width: 750px;
    min-height: 650px;
}

#head {
    height:94.3%;
}

#banner {
    background: url(Images/banner3.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    height: 100%;
    padding-top: 17%;
}

#greeting {
    font-size: 5em;
    margin: 1.7em auto 0;
    width: 95%;
    transition: 0.2s;
    background-color:white;
    color:black;
    mix-blend-mode: screen;
    font-family: 'Rock Salt', cursive;
    padding:5px;
}

#introduction {
    color:white;
    font-size: 1.3em;
    margin: 4% 23%;
}

#introduction i {
    font-size:1em;
    padding-bottom:5%;
}
#greeting-message {
    font-size: 1.5em;
    /*margin-top: 5em;*/
    margin-bottom: 2em;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    /* Set the fixed height of the footer here */
    height: 60px;
    line-height: 60px; /* Vertically center the text there */
}

/* Style the tab buttons */
.tablink {
    /*background-image:linear-gradient(transparent, #222);*/
    background-color: #333C42;
    color: white;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 12px;
    font-size: 1.5em;
    width: 25%;
}

@media only screen and (max-width: 665px) {
    .tablink {
        width:50%;
        padding: 12px 0px;
    }

    .tabheader {
        padding-top:5em;
    }

    .contactButton {
        margin: 20% 8% 20px;
    }
}

@media(hover: hover) {
    .tablink:hover {
        font-size:1.6em;
        padding: 11px 0px;
    }
}

.tabheader {
    padding-top:3em;
    background-clip: content-box;
    color:white;
    text-align: center;
}

/* Set default styles for tab content */
.tabcontent {
    color: white;
    display: none;
    padding: 25px;
    text-align: center;
}

#menubar {
    z-index: 1;
}

/* Page content */
.content {
    padding: 16px;
}

/* The sticky class is added to the navbar with JS when it reaches its scroll position */
.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
.sticky + .content {
    padding-top: 60px;
}

/* Style all font awesome icons */
.fa {
    font-size: 19px;
}
.social {
    color:black;
    mix-blend-mode: screen;
    background: white;
    font-size: 2em;
    padding: 8px;
    transition: 0.3s;
    width:45px;
    margin:0 7px;
}

.fa-linkedin:hover {
    background: #007bb5;
    color: white;
    padding: 8px;
    text-decoration: none;
    mix-blend-mode: normal;
}
.fa-github:hover {
    background: black;
    color: white;
    padding: 8px;
    text-decoration: none;
    mix-blend-mode: normal;
}

.fa-instagram:hover {
    background: #DD2A7B;
    color: white;
    padding: 8px;
    text-decoration: none;
    mix-blend-mode: normal;
}

.fa-facebook:hover {
    background: #3b5998;
    color: white;
    padding: 8px;
    text-decoration: none;
    mix-blend-mode: normal;
}

#about-me {
    margin-top:40px;
}
.contactButton {
    /*background-image: linear-gradient(transparent, lightpink);*/
    background-color: #ffcccc;
    color: white;
    padding: 10px;
    text-align: center;
    display: inline-block;
    font-size: 1.5em;
    margin: 8% 10% 20px;
    width: 80%;
    border-radius: 3px;
    transition: 0.3s;
}

.contactButton:hover, .contactButton:focus {
    background-image: linear-gradient(lightpink, #ffcccc);
    color:white;
    text-decoration: none;
}

#topBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    border: none;
    /*background-image: linear-gradient(transparent, #222);*/
    background-color: #333C42;
    color: white;
    cursor: pointer;
    padding: 3px 15px;
    border-radius: 3px;
    font-size: 1.5em;
    transition: 0.3s;
}

#topBtn:hover {
    background-image: linear-gradient(#222, #333C42);
}

.column {
    width: 23%;
    margin: 1%;
    color:white;
    padding:15px 20px 50px 20px;
    border-radius: 3px;
    font-size:1.1em;
    background-color: #333C42;
}

.project-column {
    width: 28%;
    margin: 1%;
    color:white;
    padding:15px 20px 50px 20px;
    border-radius: 3px;
    font-size:1.1em;
    background-color: #333C42;
}

.column li {
    margin-left:5%;
}

.column b {
    font-size: 1.5em;
    margin-top: 5%;
}

.column h2 {
    font-size: 1.7em;
    text-align: center;
}
.column h5 {
    font-style: italic;
}

hr {
    background-color:white;
}
.row {
    margin:0 6%;
}
/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

@media screen and (max-width: 1000px) {
    .column {
      width: 100%;
    }
}

.contacts{
    margin-top:85px;
}

#projects {
    padding-bottom: 40px;
}

